Fix z-index issue

--- a/css/queries.css
+++ b/css/queries.css
@@ -146,7 +146,7 @@
 		left: 0;
 		width: 100%;
 		height: 100vh;
-		z-index: 50000;
+		z-index: 999;
 
 		/* NOTE: Horizontal slide-in out of the menu */
 		-webkit-transform: translateX(100%);
